Workbench Render Crash in Default Cube Scene #60908

Closed
opened 2019-01-27 04:58:51 +01:00 by Tom M · 10 comments

System Information
Operating system: Ubuntu 18.04
Graphics card: Intel HD 4000

Blender Version
Broken: Today's. Please see attached system-info{F6417266}

Worked: (optional) Have seen this problem during the past week. Same problem in Fedora 27.

Short description of error
Workbench render crash

Exact steps for others to reproduce the error
Select factory setup
Select Workbench render engine
Select Render Image
Crash{F6417272}

blender.crash.txt

**System Information** Operating system: Ubuntu 18.04 Graphics card: Intel HD 4000 **Blender Version** Broken: Today's. Please see attached system-info{[F6417266](https://archive.blender.org/developer/F6417266/system-info.txt)} Worked: (optional) Have seen this problem during the past week. Same problem in Fedora 27. **Short description of error** Workbench render crash **Exact steps for others to reproduce the error** Select factory setup Select Workbench render engine Select Render Image Crash{[F6417272](https://archive.blender.org/developer/F6417272/system-info.txt)} [blender.crash.txt](https://archive.blender.org/developer/F6417274/blender.crash.txt)
Author

Added subscriber: @tlm-3

Added subscriber: @tlm-3

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Confirmed. (Win 10 here)

Confirmed. (Win 10 here)

Added subscriber: @machieb

Added subscriber: @machieb

I can also confirm. (Windows 10 Pro x64)

I can also confirm. (Windows 10 Pro x64)

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador

I can confirm too. win 10 64, nvidia 1060 6gb

I can confirm too. win 10 64, nvidia 1060 6gb

This issue was referenced by d97df138d1

This issue was referenced by d97df138d1ab965a39973366810952979d164665

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Renders fine now in Cycles, Eevee and Workbench. Great appreciation to the uber-coder and Team Blender. 2.8 is marvelous.

Renders fine now in Cycles, Eevee and Workbench. Great appreciation to the uber-coder and Team Blender. 2.8 is marvelous.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60908
No description provided.