Fix T60908: crash in workbench render after DoF changes.